made an audit to fix roles and package manager and some other errors
